--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,43 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
-    repositories {
-        google()
-        jcenter()
-        
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+  ext.kotlin_version = '1.3.61'
+  repositories {
+    google()
+    jcenter()
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:3.5.3'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    // NOTE: Do not place your application dependencies here; they belong
+    // in the individual module build.gradle files
+  }
 }
 
 allprojects {
-    repositories {
-        google()
-        jcenter()
-        
+  repositories {
+    google()
+    jcenter()
+
+    maven {
+      url 'https://maven.google.com/'
     }
+  }
 }
 
 task clean(type: Delete) {
-    delete rootProject.buildDir
+  delete rootProject.buildDir
+}
+
+// Define versions in a single place
+ext {
+  // Sdk and tools
+
+  // App dependencies
+  rxjavaVersion = '2.2.17'
+  rxandroidVersion = '2.1.1'
+  rxBindingVersion = '2.2.0'
+  rxKotlinVersion = '2.4.0'
+  lifecycleVersion = '2.2.0'
+  roomVersion = '2.2.3'
 }
