--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,9 @@
     </activity>
 
     <activity
-        android:name=".MainActivity"
+        android:name=".screens.main.MainActivity"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme.NoActionBar" />
+        android:theme="@style/AppTheme.FullScreen" />
 
     <activity
         android:name=".screens.signInUp.SignInUpActivity"
